welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: Unit does not take parameters
		replacement();
                           ^